@@ -5,14 +5,14 @@ import lombok.extern.slf4j.Slf4j;
 import org.jsoup.Connection;
 import org.jsoup.Jsoup;
 import org.jsoup.nodes.Document;
-
 import org.jsoup.nodes.Element;
 import org.jsoup.select.Elements;
 import org.springframework.stereotype.Component;
 import searchengine.config.CrawlingSettings;
 
 import java.io.IOException;
-import java.net.URL;
+import java.net.URI;
+import java.net.URISyntaxException;
 import java.util.HashSet;
 import java.util.Set;
 import java.util.concurrent.RecursiveTask;
@@ -22,43 +22,111 @@ import java.util.concurrent.RecursiveTask;
 @RequiredArgsConstructor
 public class SiteParser {
     private final CrawlingSettings crawlingSettings;
-    private Set<String> visitedUrls = new HashSet<>();
+
     /**
-     * Получает Connection.Response для URL с настройками
+     * Получает данные страницы с безопасной обработкой URL
      */
-    public Connection.Response getResponse(String url) throws IOException {
+    public PageData getPageData(String url) throws IOException {
+        log.debug("getPageData called with URL: '{}'", url);
+
+        if (url == null) {
+            throw new IllegalArgumentException("URL is null");
+        }
+
+        String cleanedUrl = cleanUrl(url);
+        if (cleanedUrl.isEmpty()) {
+            throw new IllegalArgumentException("URL is empty after cleaning");
+        }
+
         try {
             Thread.sleep(crawlingSettings.getDelayMs());
 
-            Connection connection = Jsoup.connect(url)
+            Connection connection = Jsoup.connect(cleanedUrl)
                     .userAgent(crawlingSettings.getUserAgent())
                     .referrer(crawlingSettings.getReferrer())
                     .timeout(10000)
                     .ignoreHttpErrors(true)
                     .ignoreContentType(true);
 
-            return connection.execute();
+            Connection.Response response = connection.execute();
+            Document doc = response.parse();
+
+            log.debug("Successfully fetched page: {}, status: {}", cleanedUrl, response.statusCode());
+            return new PageData(doc, response.statusCode());
+
         } catch (InterruptedException e) {
             Thread.currentThread().interrupt();
             throw new IOException("Parsing interrupted", e);
+        } catch (Exception e) {
+            log.error("Error fetching page: {}", cleanedUrl, e);
+            throw new IOException("Failed to fetch page: " + cleanedUrl, e);
         }
     }
 
     /**
-     * Получает Document для URL с настройками
+     * Очищает и нормализует URL
      */
-    public Document getDocument(String url) throws IOException {
-        Connection.Response response = getResponse(url);
-        return response.parse();
+    private String cleanUrl(String url) {
+        if (url == null) return "";
+
+        url = url.trim();
+
+        // Удаляем лишние пробелы и управляющие символы
+        url = url.replaceAll("\\s+", "");
+
+        // Проверяем, что URL не пустой после очистки
+        if (url.isEmpty()) {
+            return "";
+        }
+
+        // Добавляем протокол, если его нет
+        if (!url.startsWith("http://") && !url.startsWith("https://")) {
+            url = "http://" + url;
+        }
+
+        // Удаляем фрагменты (#) и параметры запроса (?)
+        try {
+            URI uri = new URI(url);
+            String scheme = uri.getScheme();
+            String host = uri.getHost();
+            String path = uri.getPath();
+
+            if (host == null) {
+                return "";
+            }
+
+            // Собираем чистый URL
+            StringBuilder cleanUrl = new StringBuilder();
+            cleanUrl.append(scheme).append("://").append(host);
+            if (path != null && !path.isEmpty()) {
+                cleanUrl.append(path);
+            }
+
+            return cleanUrl.toString();
+
+        } catch (URISyntaxException e) {
+            log.warn("Invalid URL syntax: {}, trying to fix...", url);
+
+            // Простая попытка исправить
+            int hashIndex = url.indexOf('#');
+            if (hashIndex != -1) {
+                url = url.substring(0, hashIndex);
+            }
+
+            int queryIndex = url.indexOf('?');
+            if (queryIndex != -1) {
+                url = url.substring(0, queryIndex);
+            }
+
+            return url;
+        }
     }
 
     /**
-     * Получает Document и код статуса
+     * Получает Document (для обратной совместимости)
      */
-    public PageData getPageData(String url) throws IOException {
-        Connection.Response response = getResponse(url);
-        Document doc = response.parse();
-        return new PageData(doc, response.statusCode());
+    public Document getDocument(String url) throws IOException {
+        return getPageData(url).getDocument();
     }
 
     /**
@@ -82,35 +150,38 @@ public class SiteParser {
         }
     }
 
-
-    public String getUserAgent() {
-        return crawlingSettings.getUserAgent();
-    }
-
-    public String getReferrer() {
-        return crawlingSettings.getReferrer();
-    }
-
-    public int getDelayMs() {
-        return crawlingSettings.getDelayMs();
-    }
-
     /**
-     * Извлекает ссылки из документа
+     * Извлекает ссылки из документа с проверкой
      */
     public Set<String> extractLinks(Document doc, String baseUrl) {
         Set<String> links = new HashSet<>();
 
+        if (doc == null) {
+            log.warn("Document is null for baseUrl: {}", baseUrl);
+            return links;
+        }
+
         try {
             Elements linkElements = doc.select("a[href]");
+            log.debug("Found {} links on page: {}", linkElements.size(), baseUrl);
 
             for (Element link : linkElements) {
                 String href = link.attr("abs:href");
 
-                if (isValidLink(href, baseUrl)) {
-                    links.add(href);
+                // Проверяем, что href не null и не пустой
+                if (href == null || href.trim().isEmpty()) {
+                    continue;
+                }
+
+                // Очищаем URL перед добавлением
+                String cleanedHref = cleanUrl(href);
+                if (!cleanedHref.isEmpty() && isValidLink(cleanedHref, baseUrl)) {
+                    links.add(cleanedHref);
                 }
             }
+
+            log.debug("After filtering: {} valid links", links.size());
+
         } catch (Exception e) {
             log.error("Error extracting links from: {}", baseUrl, e);
         }
@@ -118,25 +189,39 @@ public class SiteParser {
         return links;
     }
 
+    /**
+     * Проверяет, является ли ссылка валидной
+     */
     private boolean isValidLink(String url, String baseUrl) {
-        if (url == null || url.isEmpty()) {
+        if (url == null || url.isEmpty() || baseUrl == null || baseUrl.isEmpty()) {
             return false;
         }
 
         try {
-            URL parsedUrl = new URL(url);
-            URL parsedBaseUrl = new URL(baseUrl);
+            URI uri = new URI(url);
+            URI baseUri = new URI(baseUrl);
 
-            return parsedUrl.getHost().equals(parsedBaseUrl.getHost()) &&
-                    !url.contains("#") &&
-                    !url.matches(".*\\.(pdf|jpg|png|gif|zip|rar)$");
+            // Проверяем, что ссылка принадлежит тому же домену
+            boolean sameHost = uri.getHost() != null &&
+                    uri.getHost().equals(baseUri.getHost());
+
+            // Исключаем якоря и файлы
+            boolean notAnchor = !url.contains("#");
+            boolean notFile = !url.matches(".*\\.(pdf|jpg|png|gif|zip|rar|doc|docx|xls|xlsx|ppt|pptx)$");
+
+            return sameHost && notAnchor && notFile;
+
+        } catch (URISyntaxException e) {
+            log.debug("Invalid URL syntax in isValidLink: {} (base: {})", url, baseUrl);
+            return false;
         } catch (Exception e) {
+            log.warn("Error validating link: {}", url, e);
             return false;
         }
     }
 
     /**
-     * Рекурсивная задача для обхода страниц
+     * Рекурсивная задача для обхода страниц (обновлённая)
      */
     public static class PageParseTask extends RecursiveTask<Set<String>> {
         private final String url;
@@ -144,7 +229,7 @@ public class SiteParser {
         private final SiteParser siteParser;
         private final Set<String> visitedUrls;
         private final int depth;
-        private final int maxDepth = 3;
+        private final int maxDepth = 2; // Уменьшим глубину для отладки
 
         public PageParseTask(String url, String baseUrl, SiteParser siteParser,
                              Set<String> visitedUrls, int depth) {
@@ -166,10 +251,15 @@ public class SiteParser {
                 visitedUrls.add(url);
             }
 
+            log.debug("Parsing page at depth {}: {}", depth, url);
+
             try {
                 Document doc = siteParser.getDocument(url);
                 Set<String> links = siteParser.extractLinks(doc, baseUrl);
                 allLinks.addAll(links);
+
+                // Добавляем текущий URL
+                allLinks.add(url);
 
                 if (depth < maxDepth) {
                     Set<PageParseTask> tasks = new HashSet<>();
@@ -192,6 +282,8 @@ public class SiteParser {
 
             } catch (IOException e) {
                 log.error("Error parsing page: {}", url, e);
+            } catch (Exception e) {
+                log.error("Unexpected error parsing page: {}", url, e);
             }
 
             return allLinks;
